# MpApi

./: .gitignore  .project  HigherLevelNotes.md  INSTALL.md  New toml format.md  New_toml_configuration.md  README.md  minkDSLFormat.md  pyproject.toml  setup.cfg
.github/workflows/: ruffformat.yml
data/: definitionAll.xml  fromScratch.xml  jobs.dsl  module_1_4.xsd  search_1_4.xsd
data/old/: definition.xml  output.xml  search.xml
src/: Helper.py  Liedtke.py  Module.py  MpApi.py  Object.py  ObjectGroup.py  Replace.py  Replace2.py  Sar.py  Search.py  __init__.py  ctext.py  ctexte.py  digiP.py  du.py  experiments.py  getAttachments.py  getItem.py  higherLevel.py  mink.py  mkGrp.py  moduleItem.py  moduleList.py  mpapi.py  replace.py  set_smbfreigabe.py  smbfreigabe.py  stats.py  touch.py
src/MpApi/: Chunky.py  Client.py  Helper.py  Mink.py  Module.py  Sar.py  Search.py  Voc.py  __init__.py
src/MpApi/Replace/: ErwerbNotizAusgabe2.py  Touch.py  WestFreigabe.py  WestMarker.py
src/Replace/: Act.py  BoxerAufstand.py  Check.py  Cycle.py  DigiP.py  DigiP2.py  ErwerbNotizAusgabe.py  ErwerbNotizAusgabe2.py  ErwerbNotizAusgabe3.py  Musik3Wege.py  Schallplatten.py  WestFreigabe.py  WestMarker.py
src/bak/: ModuleItem.py  ObjectGroup.py  RepeatableGroup.py  ford.py  old.py
src/mpapi/: ObjectGroup.py  __init__.py  chunky.py  client.py  client2.py  constants.py  filterUnpublished.py  getAttachments.py  helper.py  item.py  mink.py  mink2.py  mink_dsl.py  module.py  record.py  sar.py  sar2.py  search.py  validate.py  voc.py  vocabulary.py
test/: 739673.xml  fromScratch.xml  getDefinitionAll.xml  getItem.xml  mk_test_data.py  no_test_vocabulary.py  pytest.ini  standalone.py  tast_basicVoc.py  tast_black.py  tast_chunky.py  tast_record.py  test-reg-exhibit20222.xml  test_BasicVoc.py  test_Fragen.py  test_MpApi.py  test_MpApiSearch.py  test_MpApiVoc.py  test_Sar.py  test_basicVoc.py  test_black.py  test_chunky.py  test_freigabe.py  test_mink.py  test_module.py  test_one.py  test_sar.py  test_sar2.py  test_search.py  test_vocabulary.py  vocabulary.py
test/http/: .gitignore  README.txt  test_Fragen.py  test_MpApi.py  test_MpApiVoc.py  test_Sar.py  test_SimpleVoc.py  test_client.py  test_freigabe.py  test_mink.py  test_mpapi.py  test_sar.py  test_sar_http.py  test_search.py  test_search2.py  test_session.py  test_simpleVoc.py  test_since.py  update.py
xsd/: module_1_6.xsd  search_1_6.xsd  session_1_0.xsd  vocabulary_1_1.xsd
xsl/: KorrekturErwerb.xsl  ListVocs.xsl
(+24 files in other folders)
