[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "MpApi"
authors = [{name = "Maurice Mengel", email = "mauricemengel@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
keywords = ["museum", "museumPlus", "api client"]
# datetime should be included in Python
# dateutil used in du.py
dependencies = [
	"dateutil", 
    "lxml",
    "requests >=2.6",
	"typing_extensions",
]
[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
]

[project.scripts]
du = 'mpapi:du'
mink = 'mpapi:mink'
mpReplace = 'mpapi:replace'