[tool.poetry]
name = "mpapi"
version = "0.1.0"
description = "MpApi is an unofficial Open Source Client for MuseumPlus MpRIA WS "
keywords = ["museum", "museumPlus", "api client"]
authors = ["Maurice Mengel <mauricemengel@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.2"
requests = "^2.6"
tomli = { version = "^1.0.1", python = "<3.11" }
pytest = { version = "^2.7.3", optional = true}

[tool.poetry.scripts]
mink = 'mpapi:mink'
getAttachments = 'mpapi:getAttachments'
getItem = 'mpapi:getItem'
updateItem = 'mpapi:updateItem'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
