[build-system]
requires = ["flit_core >=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "MpApi"
authors = [{name = "Maurice Mengel", email = "mauricemengel@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
keywords = ["museum", "museumPlus", "api client"]
# datetime should be included in Python
# typing_extensions makes newer typing features available to older Pythons 
dependencies = [
	"flit",
    "lxml >=4.8.0", #pathlike objects
    "requests >=2.6",
]
[project.optional-dependencies]
test = [
	"tomli >= 2.0.0", # only required for python_version < 3.11
    "pytest >=2.7.3",
]

[project.scripts]
mink = 'mpapi:mink'
getAttachments = 'mpapi:getAttachments'
getItem = 'mpapi:getItem'
updateItem = 'mpapi:updateItem'

[tool.flit.sdist]
include = ["src/mpapi/__init__.py"]